# archivumStreamlit

./: pyproject.toml  requirements.txt
app/: streamlit_app.py  utils.py
app/components/: filters.py
app/data/: advantages_and_disadvantages.xlsx  alchemy.xlsx  armors.xlsx  attributes.xlsx  calendar.xlsx  combat_rules.xlsx  db_alchemy_consumables.xlsx  db_character_attributes.xlsx  db_character_skills.xlsx  db_character_traits.xlsx  db_combat_rules.xlsx  db_itens_adventure_gear.xlsx  db_itens_armors.xlsx  db_itens_weapons.xlsx  db_magic_grimory.xlsx  db_magic_rules.xlsx  db_yrth_calendar.xlsx  gear.xlsx  grimory.xlsx  magic_rules.xlsx  skills.xlsx  weapons.xlsx  weapons_with_tiers.xlsx
app/pages/: archivum.py
app/pages/alchemy/: alchemy.py  alchemy_rules.py  consumables.py
app/pages/character/: advantages_and_disadvantages.py  attributes.py  skills.py  traits.py
app/pages/combat/: combat_rules.py
app/pages/itens/: adventure_gear.py  armors.py  weapons.py
app/pages/magic/: grimory.py  magic_rules.py
app/pages/yrth/: calendar.py
app/src/: data_loader.py
