[project]
name = "Archivum"
version = "0.1.0"
description = "A Streamlit application."
authors = [
  { name = "Victor Vinci Fantucci", email = "r4ven.project@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.40",
]

# Optional: if you want to use uv/pdm/poetry just replace the build-system block below.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ---------------------------
#   BLACK CONFIGURATION
# ---------------------------
[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
skip-string-normalization = false